@@ -16,6 +16,7 @@ SimGrid (3.5) unstable; urgency=low
  * New data container: setset (set of sets of elements)
  * New module: mmalloc (mapped malloc)
  * New function: xbt_dict_cursor_set_data()
+ * New function: xbt_dynar_sort()
  * New function: xbt_fifo_get_last_item()
  * Bug fix in xbt_dynar_shrink(): use the right element size
  * Use library init/fini functions for our initialization.
